# python-docker-kubernetes-template

./: Makefile  README.md  config.yml  docker-compose.yml  pyproject.toml
.docker/: mysql.dockerfile  nginx.dockerfile  product-service.dockerfile
.docker/config/: nginx.development.conf  product-service.development.yml
.docker/env/: product-service.development.env
.docker/product_service_scripts/: entrypoint.sh
.k8s/: mysql.deployment.yml  mysql.service.yml  nginx.deployment.yml  nginx.service.yml  products.api-deployment.yml  products.api-service.yml
deploy/kubernetes-dashboard/: README.md
deploy/web-app/: Dockerfile  README.md  docker-compose.yml
deploy/web-app/config/: config.yml
deploy/web-app/db/volumes/: README.md  mysql.deployment.yml
deploy/web-app/nginx/: nginx.clusterip.service.yml  nginx.deployment.yml  nginx.loadbalancer.service.yml  nginx.nodeport.service.yml  nginx.pod.yml
deploy/web-app/product-service/: Dockerfile  entrypoint.sh
docs/: DEPLOYMENT.md
src/core/entities/: product.py
src/core/interfaces/: product_repository.py
src/infrastructure/data/errors/: not_found_error.py
src/product_service/: app.py  containers.py
src/product_service/containers/: application.py  gateways.py  services.py
src/product_service/controllers/: product.py
src/product_service/extensions/: register_routes.py
src/web_app/: app.py  containers.py  environment.py
src/web_app/controllers/: product.py
src/web_app/extensions/: register_routes.py
tests/functional/product_service/: app_container.py  app_seed_data.py  conftest.py
(+9 files in other folders)
