[tool.poetry]
name = "python-docker-template"
version = "0.1.0"
description = ""
authors = ["rynoterblanche <ryno.terblanche@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
dependency-injector = "^4.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

